--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ typed-ast==1.3.5
 Werkzeug==0.15.2
 wrapt==1.11.1
 Flask-Cors==3.0.8
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
+autopep8==1.5
+psycopg2-binary==2.8.4
+gunicorn==20.0.4
+pycodestyle==2.5.0
